# PothosOpenCL

./: CMakeLists.txt  Changelog.txt  OpenClConfLoader.cpp  OpenClInfo.cpp  README.md  TestOpenClBlocks.cpp
